--- a/templates/editortimeline.mustache
+++ b/templates/editortimeline.mustache
@@ -34,13 +34,13 @@ Example context (json):
         </div>
         <div class="col text-center d-flex align-items-center justify-content-center"
              id="playbutton">
-            <button class="btn btn-sm py-0 px-1 text-white mr-3 border-0 bg-transparent" type="button" id="rewind" data-toggle="tooltip" title="{{#str}}rewind200,mod_interactivevideo{{/str}}" >
+            <button class="btn btn-sm py-0 px-1 text-white mr-3 border-0 bg-transparent" type="button" id="rewind" title="{{#str}}rewind200,mod_interactivevideo{{/str}}" >
                 <i class="bi bi-rewind-fill"></i>
             </button>
-            <button class="btn btn-sm py-0 px-1 text-white mr-3 border-0 bg-transparent" data-toggle="tooltip" title="{{#str}}playpause,mod_interactivevideo{{/str}}" type="button" id="playpause">
+            <button class="btn btn-sm py-0 px-1 text-white mr-3 border-0 bg-transparent" title="{{#str}}playpause,mod_interactivevideo{{/str}}" type="button" id="playpause">
                 <i class="bi bi-play-fill fs-35px"></i>
             </button>
-            <button class="btn btn-sm py-0 px-1 text-white border-0 bg-transparent" type="button" id="fast-forward" data-toggle="tooltip" title="{{#str}}fastforward200,mod_interactivevideo{{/str}}" >
+            <button class="btn btn-sm py-0 px-1 text-white border-0 bg-transparent" type="button" id="fast-forward" title="{{#str}}fastforward200,mod_interactivevideo{{/str}}" >
                 <i class="bi bi-fast-forward-fill"></i>
             </button>
             <span id="timeline-timestamp"><span class="text-white" id="currenttime">00:00</span><span class="mx-1">/</span><span class="text-white" id="duration">00:00</span></span>
