--- a/templates/pagenav.mustache
+++ b/templates/pagenav.mustache
@@ -34,7 +34,7 @@ Example context (json):
     <div class="dropdown"
          title="{{#str}}todo,mod_interactivevideo{{/str}}"
          data-toggle="tooltip" data-placement="right">
-        <button class="btn btn-sm border-0"
+        <button class="btn btn-sm border-0 bg-transparent"
                 type="button"
                 id="completiondropdown"
                 data-toggle="dropdown"
