--- a/styles.css
+++ b/styles.css
@@ -2405,7 +2405,7 @@ body.path-admin-setting #admin-enablecontenttypes .form-defaultinfo {
     overflow: visible;
 }
 
-.path-course-view .modtype_interactivevideo:has(.interactivevideo-card) .activity-basis {
+.path-course-view:not(.editing) .modtype_interactivevideo:has(.interactivevideo-card) .activity-basis {
     display: none!important;
 }
 
