--- a/templates/reporttable.mustache
+++ b/templates/reporttable.mustache
@@ -21,7 +21,9 @@ Example context (json):
 }}
 <div id="wrapper" class="position-relative"></div>
 <div id="toolbar" class="bg-transparent pt-5 position-fixed"></div>
-<div id="reporttable" class="p-3 position-relative" style="margin-top: 70px;">
+<div id="reporttable"
+     class="p-3 position-relative"
+     style="margin-top: 70px">
     {{{groupselector}}}
     <div class="position-absolute w-100 h-100 no-pointer bg-white"
          id="background-loading">
@@ -35,35 +37,91 @@ Example context (json):
         </div>
     </div>
     <table id="completiontable"
-           class="table table-sm table-bordered table-striped w-100">
+           class="table table-sm table-bordered table-striped w-100 m-0">
         <thead class="sticky-top bg-white">
             <tr>
                 <th id="id">{{#str}}id,mod_interactivevideo{{/str}}</th>
                 <th id="participant" class="bg-white sticky-left-0">{{#str}}participant,mod_interactivevideo{{/str}}</th>
-                <th id="firstname">{{#str}}firstname{{/str}}</th>
-                <th id="lastname">{{#str}}lastname{{/str}}</th>
-                <th id="email">{{#str}}email{{/str}}</th>
-                <th id="timecreated">{{#str}}timestarted,mod_interactivevideo{{/str}}</th>
-                <th id="timecompleted">{{#str}}timecompleted,mod_interactivevideo{{/str}}</th>
-                <th id="completionpercentage">{{#str}}completionpercentage,mod_interactivevideo{{/str}}</th>
-                <th id="xp">{{#str}}xp,mod_interactivevideo{{/str}}/{{totalxp}}</th>
-                {{#items}}
-                <th class="rotate"
-                    id="item-{{id}}"
-                    data-item="{{id}}"
-                    data-type="{{type}}">
-                    <div>
-                        <i title="{{typetitle}}" class="fa-fw fa mx-1 {{icon}}"></i>
-                        <a href="javascript:void(0)"
-                           data-toggle="tooltip"
-                           data-trigger="focus"
-                           data-title="{{title}}">{{title}}</a>
+                <th id="firstname" class="exportable colvis inv profilefield">{{#str}}firstname{{/str}}</th>
+                <th id="lastname" class="exportable colvis inv profilefield">{{#str}}lastname{{/str}}</th>
+                {{#identity}}
+                <th id="{{name}}" class="exportable colvis inv profilefield">{{label}}</th>
+                {{/identity}}
+            <th id="timecreated" class="text-truncate">
+                {{#str}}timestarted,mod_interactivevideo{{/str}}
+                <div class="position-absolute font-weight-normal controls d-none"
+                     style="bottom: 0">
+                    <div class="d-flex align-items-center">
+                        <input type="checkbox" checked data-start="true" />
+                        <small class="mx-2">{{#str}}started,mod_interactivevideo{{/str}}</small>
                     </div>
-                </th>
-            {{/items}}
-        </tr>
-    </thead>
-    <tbody>
-    </tbody>
+                    <div class="d-flex align-items-center">
+                        <input type="checkbox" checked data-start="false" />
+                        <small class="ml-2">{{#str}}notstarted,mod_interactivevideo{{/str}}</small>
+                    </div>
+                </div>
+            </th>
+            <th id="timecompleted" class="text-truncate">
+                {{#str}}timecompleted,mod_interactivevideo{{/str}}
+                <div class="position-absolute font-weight-normal controls d-none"
+                     style="bottom: 0">
+                    <div class="d-flex align-items-center">
+                        <input type="checkbox" checked data-completed="true" />
+                        <small class="mx-2">{{#str}}completed,mod_interactivevideo{{/str}}</small>
+                    </div>
+                    <div class="d-flex align-items-center">
+                        <input type="checkbox" checked data-completed="false" />
+                        <small class="ml-2">{{#str}}incomplete,mod_interactivevideo{{/str}}</small>
+                    </div>
+                </div>
+            </th>
+            <th id="completionpercentage">
+                {{#str}}completionpercentage,mod_interactivevideo{{/str}}
+                {{#completionfilter}}
+                <div class="position-absolute font-weight-normal controls d-none"
+                     style="bottom: 0">
+                    <div class="d-flex align-items-center">
+                        <input type="checkbox"
+                               checked
+                               class="less"
+                               data-percentage="{{completionpercentage}}" />
+                        <small class="ml-2">< {{
+                        completionpercentage}}%</small>
+                    </div>
+                    <div class="d-flex align-items-center">
+                        <input type="checkbox"
+                               checked
+                               class="more"
+                               data-percentage="{{completionpercentage}}" />
+                        <small class="ml-2">>= {{completionpercentage}}%</small>
+                    </div>
+                </div>
+            {{/completionfilter}}
+        </th>
+        <th id="xp">{{#str}}xp,mod_interactivevideo{{/str}}/{{totalxp}}</th>
+        {{#items}}
+        <th class="rotate"
+            id="item-{{id}}"
+            data-item="{{id}}"
+            data-type="{{type}}"
+            data-toggle="tooltip"
+            data-trigger="focus"
+            data-placement="top"
+            title="{{title}}">
+            <div>
+                <input type="checkbox"
+                       class="form-check-input rotate-0 controls d-none"
+                       id="item-{{id}}"
+                       data-item="{{id}}"
+                       data-type="{{type}}">
+                <i title="{{typetitle}}" class="fa-fw fa mx-1 {{icon}}"></i>
+                <a href="javascript:void(0)">{{title}}</a>
+            </div>
+        </th>
+    {{/items}}
+</tr>
+</thead>
+<tbody>
+</tbody>
 </table>
 </div>
