--- a/templates/playermodal.mustache
+++ b/templates/playermodal.mustache
@@ -9,11 +9,11 @@ but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.
 You should have received a copy of the GNU General Public License
-along with Moodle.  If not, see <http://www.gnu.org/licenses />.
+along with Moodle. If not, see <http://www.gnu.org/licenses />.
 }}
 {{!
 @template mod_interactivevideo/playermodal
-TODO describe template playermodal
+Player modal
 Example context (json):
 {
 }
@@ -74,7 +74,6 @@ Example context (json):
                         title="{{#str}}togglecontrols,mod_interactivevideo{{/str}}">
                     <i class="fa fa-chevron-up text-white m-0 fa-2x" aria-hidden="true"></i>
                 </button>
-            </span>
         </div>
     </div>
 </div>
