--- a/templates/reporttable.mustache
+++ b/templates/reporttable.mustache
@@ -46,17 +46,17 @@ Example context (json):
                 <th id="lastname" class="exportable colvis inv profilefield">{{#str}}lastname{{/str}}</th>
                 {{#identity}}
                 <th id="{{name}}" class="exportable colvis inv profilefield">{{label}}</th>
-                {{/identity}}
+            {{/identity}}
             <th id="timecreated" class="text-truncate">
                 {{#str}}timestarted,mod_interactivevideo{{/str}}
                 <div class="position-absolute font-weight-normal controls d-none"
                      style="bottom: 0">
                     <div class="d-flex align-items-center">
-                        <input type="checkbox" checked data-start="true" />
+                        <input type="checkbox" checked data-start="true">
                         <small class="mx-2">{{#str}}started,mod_interactivevideo{{/str}}</small>
                     </div>
                     <div class="d-flex align-items-center">
-                        <input type="checkbox" checked data-start="false" />
+                        <input type="checkbox" checked data-start="false">
                         <small class="ml-2">{{#str}}notstarted,mod_interactivevideo{{/str}}</small>
                     </div>
                 </div>
@@ -66,11 +66,11 @@ Example context (json):
                 <div class="position-absolute font-weight-normal controls d-none"
                      style="bottom: 0">
                     <div class="d-flex align-items-center">
-                        <input type="checkbox" checked data-completed="true" />
+                        <input type="checkbox" checked data-completed="true">
                         <small class="mx-2">{{#str}}completed,mod_interactivevideo{{/str}}</small>
                     </div>
                     <div class="d-flex align-items-center">
-                        <input type="checkbox" checked data-completed="false" />
+                        <input type="checkbox" checked data-completed="false">
                         <small class="ml-2">{{#str}}incomplete,mod_interactivevideo{{/str}}</small>
                     </div>
                 </div>
@@ -84,7 +84,7 @@ Example context (json):
                         <input type="checkbox"
                                checked
                                class="less"
-                               data-percentage="{{completionpercentage}}" />
+                               data-percentage="{{completionpercentage}}">
                         <small class="ml-2">< {{
                         completionpercentage}}%</small>
                     </div>
@@ -92,7 +92,7 @@ Example context (json):
                         <input type="checkbox"
                                checked
                                class="more"
-                               data-percentage="{{completionpercentage}}" />
+                               data-percentage="{{completionpercentage}}">
                         <small class="ml-2">>= {{completionpercentage}}%</small>
                     </div>
                 </div>
@@ -115,7 +115,7 @@ Example context (json):
                        data-item="{{id}}"
                        data-type="{{type}}">
                 <i title="{{typetitle}}" class="fa-fw fa mx-1 {{icon}}"></i>
-                <a href="javascript:void(0)">{{title}}</a>
+                <a>{{title}}</a>
             </div>
         </th>
     {{/items}}
