--- a/templates/fullscreenmodal.mustache
+++ b/templates/fullscreenmodal.mustache
@@ -1,17 +1,38 @@
 
+{{!
+This file is part of Moodle - http://moodle.org/
+Moodle is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
+Moodle is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+GNU General Public License for more details.
+You should have received a copy of the GNU General Public License
+along with Moodle. If not, see
+<http : //www.gnu.org/licenses />.
+}}
+{{!
+@template mod_interactivevideo/reporttable
+Report table.
+Example context (json):
+{
+}
+}}
 <div class="modal modal-fullscreen iv-modal fade p-0"
      {{#id}}id="{{id}}"{{/id}}
      data-region="modal-container"
      role="dialog"
      aria-modal="true"
      tabindex="-1"
-     aria-labelledby="{{uniqid}}-modal-title">
+     >
     <div class="modal-dialog modal-xl modal-dialog-scrollable"
          data-region="modal"
          tabindex="0">
         <div class="modal-content position-relative">
             <div class="modal-header" data-region="header">
-                {{#title}}<h5 id="{{uniqid}}-modal-title" class="modal-title" data-region="title">{{{title}}}</h5>{{/title}}
+                {{#title}}<h5 class="modal-title" data-region="title">{{{title}}}</h5>{{/title}}
                 <button type="button"
                         class="btn btn-close"
                         data-dismiss="modal"
@@ -34,8 +55,8 @@
                 </div>
                 {{$body}}
                 {{{body}}}
-            {{/body}}
+                {{/body}}
+            </div>
         </div>
     </div>
-</div>
 </div>
