--- a/templates/reporttable.mustache
+++ b/templates/reporttable.mustache
@@ -115,7 +115,7 @@ Example context (json):
                        data-item="{{id}}"
                        data-type="{{type}}">
                 <i title="{{typetitle}}" class="fa-fw fa mx-1 {{icon}}"></i>
-                <a>{{title}}</a>
+                <a class="text-link cursor-pointer">{{title}}</a>
             </div>
         </th>
     {{/items}}
