--- a/templates/editortimeline.mustache
+++ b/templates/editortimeline.mustache
@@ -18,26 +18,26 @@ Example context (json):
 {
 }
 }}
-<div id="timeline-wrapper" class="d-flex flex-column">
+<div id="timeline-wrapper" class="d-flex flex-column" dir="ltr">
     <div id="timeline-btns" class="py-2 w-100 position-relative z-index-1">
         <div class="col">
-            <button class="btn btn-sm py-0 px-2 btn-primary text-uppercase ml-2 border-0"
+            <button class="btn btn-sm py-0 px-2 btn-primary text-uppercase mx-2 border-0"
                     type="button"
                     id="addcontent">
-                <i class="bi bi-plus-lg mr-2"></i>{{#str}}add,mod_interactivevideo{{/str}}
+                <i class="bi bi-plus-lg mx-1"></i>{{#str}}add,mod_interactivevideo{{/str}}
             </button>
-            <button class="btn btn-sm py-0 px-2 btn-secondary text-uppercase ml-1 rotatez-360 border-0"
+            <button class="btn btn-sm py-0 px-2 btn-secondary text-uppercase mx-1 rotatez-360 border-0"
                     type="button"
                     id="importcontent">
-                <i class="bi bi-arrow-down mr-2"></i>{{#str}}import,mod_interactivevideo{{/str}}
+                <i class="bi bi-arrow-down mx-1"></i>{{#str}}import,mod_interactivevideo{{/str}}
             </button>
         </div>
         <div class="col text-center d-flex align-items-center justify-content-center"
-             id="playbutton">
-            <button class="btn btn-sm py-0 px-1 text-white mr-3 border-0 bg-transparent" type="button" id="rewind" title="{{#str}}rewind200,mod_interactivevideo{{/str}}" >
+             id="playbutton" >
+            <button class="btn btn-sm py-0 px-1 text-white border-0 bg-transparent" type="button" id="rewind" title="{{#str}}rewind200,mod_interactivevideo{{/str}}" >
                 <i class="bi bi-rewind-fill"></i>
             </button>
-            <button class="btn btn-sm py-0 px-1 text-white mr-3 border-0 bg-transparent" title="{{#str}}playpause,mod_interactivevideo{{/str}}" type="button" id="playpause">
+            <button class="btn btn-sm py-0 px-1 text-white mx-3 border-0 bg-transparent" title="{{#str}}playpause,mod_interactivevideo{{/str}}" type="button" id="playpause">
                 <i class="bi bi-play-fill fs-35px"></i>
             </button>
             <button class="btn btn-sm py-0 px-1 text-white border-0 bg-transparent" type="button" id="fast-forward" title="{{#str}}fastforward200,mod_interactivevideo{{/str}}" >
@@ -54,14 +54,14 @@ Example context (json):
    data-trigger="focus"
    title="{{#str}}changeplaybackspeed,mod_interactivevideo{{/str}}"></i></span>
                 <div class="dropdown-menu dropdown-menu-right bg-black">
-                    <a class="dropdown-item changerate" data-rate="0.5" href="#"><i class="bi fa-fw ml-n3"></i>0.5</a>
-                    <a class="dropdown-item changerate" data-rate="0.75" href="#"><i class="bi fa-fw ml-n3"></i>0.75</a>
-                    <a class="dropdown-item changerate" data-rate="1" href="#"><i class="bi fa-fw bi-check ml-n3"></i>1</a>
-                    <a class="dropdown-item changerate" data-rate="1.5" href="#"><i class="bi fa-fw ml-n3"></i>1.5</a>
-                    <a class="dropdown-item changerate" data-rate="2" href="#"><i class="bi fa-fw ml-n3"></i>2</a>
+                    <a class="dropdown-item changerate px-3" data-rate="0.5" href="#"><i class="bi fa-fw"></i>0.5</a>
+                    <a class="dropdown-item changerate px-3" data-rate="0.75" href="#"><i class="bi fa-fw"></i>0.75</a>
+                    <a class="dropdown-item changerate px-3" data-rate="1" href="#"><i class="bi fa-fw bi-check"></i>1</a>
+                    <a class="dropdown-item changerate px-3" data-rate="1.5" href="#"><i class="bi fa-fw"></i>1.5</a>
+                    <a class="dropdown-item changerate px-3" data-rate="2" href="#"><i class="bi fa-fw"></i>2</a>
                 </div>
             </div>
-            <div class="d-none btn-group dropup ml-3" id="changequality" data-current="">
+            <div class="d-none btn-group dropup mx-3" id="changequality" data-current="">
             <span role="button"
                   data-toggle="dropdown"
                   aria-haspopup="true"
@@ -76,24 +76,24 @@ Example context (json):
                  id="qualitieslist"></div>
             </div>
         </div>
-        <div class="d-flex col justify-content-end">
-            <button class="btn btn-sm py-0 px-2 btn-secondary text-uppercase mr-4 border-0"
+        <div class="d-flex col justify-content-end" dir="ltr">
+            <button class="btn btn-sm py-0 px-2 btn-secondary text-uppercase mx-4 border-0"
                     disabled
                     id="savedraft">
-                <i class="bi bi-floppy mr-2"></i>{{#str}}save,mod_interactivevideo{{/str}}
+                <i class="bi bi-floppy mx-1"></i>{{#str}}save,mod_interactivevideo{{/str}}
             </button>
             <div id="zoomlevel" class="d-flex align-items-center">
-                <button class="btn btn-sm p-0 text-white mr-2 border-0 bg-transparent"
+                <button class="btn btn-sm p-0 text-white mx-2 border-0 bg-transparent"
                         type="button"
                         disabled
                         id="zoomout">
                     <i class="bi bi-zoom-out"></i>
                 </button>
-                <button class="btn btn-sm p-0 text-white mr-4 border-0 bg-transparent" type="button" id="zoomin">
+                <button class="btn btn-sm p-0 text-white mx-2 border-0 bg-transparent" type="button" id="zoomin">
                     <i class="bi bi-zoom-in"></i>
                 </button>
             </div>
-            <button class="border-0 btn btn-sm p-0 text-white mr-2 bg-transparent"
+            <button class="border-0 btn btn-sm p-0 text-white mx-2 bg-transparent"
                     data-toggle="popover"
                     data-trigger="hover"
                     data-placement="auto"
@@ -104,33 +104,33 @@ Example context (json):
             </button>
         </div>
     </div>
-    <div id="minute-markers-bg-wrapper" class="pl-5 position-absolute h-100">
-        <div id="minute-markers-bg" class="pt-1 d-flex position-relative"></div>
+    <div id="minute-markers-bg-wrapper" class="position-absolute h-100" dir="ltr" >
+        <div id="minute-markers-bg" class="pt-1 d-flex position-relative" dir="ltr"></div>
     </div>
-    <div id="minute-markers-wrapper" class="pl-5 position-relative">
+    <div id="minute-markers-wrapper" class="position-relative" dir="ltr">
         <div id="minute-markers" class="pt-1 d-flex position-relative"></div>
     </div>
-    <div id="vseek" class="ml-5 position-relative">
+    <div id="vseek" class="mx-5 position-relative" dir="ltr">
         <div id="scrollhead-top"></div>
         <div class="w-100" id="bar"></div>
     </div>
     <div id="timeline" class="px-5">
-        <div id="timeline-items-wrapper" class="pl-0">
-            <div id="timeline-items">
+        <div id="timeline-items-wrapper" class="pl-0" dir="ltr">
+            <div id="timeline-items" dir="ltr">
                 <div id="scrollbar" class="snap">
                     <div id="scrollhead" class="opacity-0 bg-transparent"></div>
                     <div id="scrollline"></div>
                 </div>
-                <div id="interaction-timeline">
-                    <div id="video-nav">
+                <div id="interaction-timeline" dir="ltr">
+                    <div id="video-nav" dir="ltr">
                         <ul>
                         </ul>
                     </div>
                 </div>
-                <div id="video-timeline-wrapper">
-                    <div id="video-timeline" class="rounded-sm"></div>
+                <div id="video-timeline-wrapper" dir="ltr">
+                    <div id="video-timeline" class="rounded-sm" dir="ltr"></div>
                 </div>
-                <div id="annotation-timeline"></div>
+                <div id="annotation-timeline" dir="ltr"></div>
             </div>
         </div>
     </div>
