--- a/templates/player.mustache
+++ b/templates/player.mustache
@@ -156,9 +156,9 @@ Example context (json):
 </div>
 </div>
 {{^displayoptions.hidemainvideocontrols}}
-<div class="mt-0 mt-md-2 bg-dark d-flex flex-column p-0 justify-content-center opacity-1"
+<div class="mt-0 mt-md-2 bg-dark d-flex flex-column p-0 justify-content-center opacity-1" dir="ltr"
      id="controller">
-    <div id="taskinfo"
+    <div id="taskinfo" dir="ltr"
          class="border-0 flex-column align-items-center justify-content-end px-3 bg-transparent">
         <div class="align-items-start position-relative w-100"
              id="interactions-nav">
@@ -169,7 +169,7 @@ Example context (json):
              id="video-nav">
             <ul>
             </ul>
-            <div class="w-100 d-flex align-items-center">
+            <div class="w-100 d-flex align-items-center" dir="ltr">
                 <div id="progress" class="bg-danger"></div>
                 <div id="seek" class="w-100 position-absolute rounded"></div>
                 <div id="seekhead" class="position-absolute rounded-circle bg-danger"></div>
@@ -188,7 +188,7 @@ Example context (json):
                 <i class="bi bi-play-fill fs-25px"></i>
             </span>
             {{^displayoptions.disablechapternavigation}}
-            <div id="chaptertoggle">
+            <div id="chaptertoggle" class="mx-1">
                 <span data-toggle="tooltip"
                       data-trigger="focus"
                       title="{{#str}}togglechapter, mod_interactivevideo{{/str}}"
@@ -196,10 +196,10 @@ Example context (json):
                       id="chapterbutton"><i class="bi bi-collection"></i></span>
             </div>
         {{/displayoptions.disablechapternavigation}}
-        <span class="text-white ml-2 d-none d-md-inline" id="currenttime">00:00</span><span class="d-none d-md-inline text-white mx-1">/</span>
-        <span class="text-white d-none d-md-inline" id="duration">--:--</span>
-        <span class="text-white d-md-none d-inline ml-2" id="remainingtime">--:--</span>
-        <span class="text-secondary ml-2 d-none d-md-inline" id="chaptertitle"></span>
+        <span class="text-white mx-1 d-none d-md-inline" id="currenttime">00:00</span><span class="d-none d-md-inline text-white mx-1">/</span>
+        <span class="text-white mx-1 d-none d-md-inline" id="duration">--:--</span>
+        <span class="text-white d-md-none d-inline mx-1 " id="remainingtime">--:--</span>
+        <span class="text-secondary mx-1 d-none d-md-inline" id="chaptertitle"></span>
     </div>
     <div class="d-flex align-items-center">
         <span id="mute"
@@ -233,11 +233,11 @@ Example context (json):
                    title="{{#str}}changeplaybackspeed,mod_interactivevideo{{/str}}"></i>
             </span>
             <div class="dropdown-menu dropdown-menu-right bg-black">
-                <a class="dropdown-item text-white changerate" data-rate="0.5" href="#"><i class="bi fa-fw ml-n3"></i>0.5</a>
-                <a class="dropdown-item text-white changerate" data-rate="0.75" href="#"><i class="bi fa-fw ml-n3"></i>0.75</a>
-                <a class="dropdown-item text-white changerate" data-rate="1" href="#"><i class="bi fa-fw bi-check ml-n3"></i>1</a>
-                <a class="dropdown-item text-white changerate" data-rate="1.5" href="#"><i class="bi fa-fw ml-n3"></i>1.5</a>
-                <a class="dropdown-item text-white changerate" data-rate="2" href="#"><i class="bi fa-fw ml-n3"></i>2</a>
+                <a class="dropdown-item text-white changerate px-3" data-rate="0.5" href="#"><i class="bi fa-fw"></i>0.5</a>
+                <a class="dropdown-item text-white changerate px-3" data-rate="0.75" href="#"><i class="bi fa-fw"></i>0.75</a>
+                <a class="dropdown-item text-white changerate px-3" data-rate="1" href="#"><i class="bi fa-fw bi-check"></i>1</a>
+                <a class="dropdown-item text-white changerate px-3" data-rate="1.5" href="#"><i class="bi fa-fw"></i>1.5</a>
+                <a class="dropdown-item text-white changerate px-3" data-rate="2" href="#"><i class="bi fa-fw"></i>2</a>
             </div>
         </div>
         <div class="d-none btn-group dropup" id="changequality" data-current="">
